--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -15,4 +15,4 @@ jobs:
         TARGET_BRANCH: gh-pages
         BUILD_SCRIPT: yarn && yarn build
         BUILD_DIR: docs/.vuepress/dist
-        CNAME: https://pixkk.com
+        CNAME: https://vuetube.pixkk.com
